# hackempire-x

./: .gitignore  README.md  __init__.py  _bootstrap.py  conftest.py  hack.py  hackempire  main.py  pyproject.toml  requirements.txt  setup.sh
ai/: ai_client.py  ai_engine.py  autonomous_engine.py  bytez_client.py  false_positive_filter.py  mitre_mapper.py  model_chain.py  pentest_kb.py  poc_generator.py  prompt_builder.py  report_writer.py  response_parser.py  tool_knowledge.py
cli/: banner.py  cli.py  commands.py  progress.py
core/: config.py  context_manager.py  fallback_chain.py  kb_manager.py  models.py  orchestrator.py  phase_manager.py  phases.py  state_manager.py  todo_planner.py  tor_manager.py
installer/: __init__.py  dependency_checker.py  dependency_resolver.py  tool_doctor.py  tool_installer.py  tool_venv_manager.py
tests/: test_aegis_bridge.py  test_ai_engine.py  test_autonomous_engine.py  test_cli.py  test_config.py  test_config_v4.py  test_export_routes.py  test_fallback_chain.py  test_kb_manager.py  test_model_chain.py  test_orchestrator_v2.py  test_phase_manager.py  test_realtime_emitter.py  test_terminal_launcher.py  test_todo_planner.py  test_tool_integrations.py  test_tool_knowledge.py  test_tool_venv_manager.py  test_tor_manager.py  test_vulnerability_model.py  test_waf.py  test_xss_methodology.py
tools/: base_tool.py  confidence_engine.py  deduplicator.py  health_tracker.py  tool_manager.py
utils/: logger.py  validator.py
web/: __init__.py  app.py  pdf_report.py  realtime_emitter.py  routes.py  state_bridge.py  terminal_launcher.py  (+1 more)
(+151 files in other folders)
