[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hackempire-x"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7.0",
    "requests>=2.31.0",
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.10.0",
    "eventlet>=0.35.2",
    "wafw00f>=2.2.0",
    "weasyprint>=60.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "hypothesis>=6.100.0"]

[tool.setuptools]
package-dir = {"hackempire" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
